browser/components/NoteItemSimple.styl
$control-height = 30px

.root
  absolute left bottom
  top $topBar-height - 1
  background-color $ui-noteList-backgroundColor

.item-simple
  position relative
  padding 0 20px
  user-select none
  cursor pointer
  background-color $ui-noteList-backgroundColor
  transition 0.2s
  &:hover
    background-color alpha($ui-button--active-backgroundColor, 20%)
    .item-simple-title
    .item-simple-title-empty
    .item-simple-title-icon
      color $ui-text-color
  &:active
    background-color alpha($ui-button--active-backgroundColor, 40%)
    color $ui-text-color
    .item-simple-title
    .item-simple-title-empty
    .item-simple-title-icon
      color $ui-text-color

.item-simple--active
  @extend .item-simple
  background-color alpha($ui-button--active-backgroundColor, 60%)
  color $ui-text-color
  .item-simple-title
  .item-simple-title-empty
    border-color transparent
    color $ui-text-color
  .item-simple-title-icon
    color $ui-text-color
  &:hover
    background-color alpha($ui-button--active-backgroundColor, 40%)
    color #e74c3c
    .menu-button-label
      color $ui-text-color
  &:active, &:active:hover
    background-color alpha($ui-button--active-backgroundColor, 40%)
    color #e74c3c
    .menu-button-label
      color $ui-text-color

.item-simple-title
  font-size 13px
  height 40px
  padding-right 20px
  box-sizing border-box
  line-height 24px
  padding-top 8px
  overflow ellipsis
  color $ui-inactive-text-color
  border-bottom $ui-border
  position relative

.item-simple-title-icon
  font-size 12px
  color $ui-inactive-text-color
  padding-right 6px

.item-simple-title-empty
  font-weight normal
  color $ui-inactive-text-color

.item-pin
  position absolute
  right 0px
  top 12px
  color #E54D42
  font-size 14px
  padding 0
  border-radius 17px

body[data-theme="white"]
  .item-simple
    background-color $ui-white-noteList-backgroundColor
    &:hover
      background-color alpha($ui-button--active-backgroundColor, 60%)
    &:active
      background-color $ui-button--active-backgroundColor

  .item-simple--active
    @extend .item-simple
    background-color $ui-button--active-backgroundColor
    &:hover
      background-color alpha($ui-button--active-backgroundColor, 60%)

body[data-theme="dark"]
  .root
    border-color $ui-dark-borderColor
    background-color $ui-dark-noteList-backgroundColor

  .item-simple
    border-color $ui-dark-borderColor
    background-color $ui-dark-noteList-backgroundColor
    &:hover
      transition 0.15s
      background-color alpha($ui-dark-button--active-backgroundColor, 20%)
      color $ui-dark-text-color
      .item-simple-title
      .item-simple-title-empty
      .item-simple-title-icon
      .item-simple-bottom-time
        transition 0.15s
        color $ui-dark-text-color
      .item-simple-bottom-tagList-item
        transition 0.15s
        background-color alpha(#fff, 20%)
        color $ui-dark-text-color
    &:active
      transition 0.15s
      background-color $ui-dark-button--active-backgroundColor
      color $ui-dark-text-color
      .item-simple-title
      .item-simple-title-empty
      .item-simple-title-icon
      .item-simple-bottom-time
        transition 0.15s
        color $ui-dark-text-color
      .item-simple-bottom-tagList-item
        transition 0.15s
        background-color alpha(white, 10%)
        color $ui-dark-text-color

  .item-simple--active
    border-color $ui-dark-borderColor
    background-color $ui-dark-button--active-backgroundColor
    .item-simple-wrapper
      border-color transparent
    .item-simple-title
    .item-simple-title-empty
    .item-simple-title-icon
    .item-simple-bottom-time
      color $ui-dark-text-color
    .item-simple-bottom-tagList-item
      background-color alpha(white, 10%)
      color $ui-dark-text-color
    &:hover
      background-color alpha($ui-dark-button--active-backgroundColor, 60%)
      color #c0392b
      .item-simple-bottom-tagList-item
        background-color alpha(#fff, 20%)

  .item-simple-title
    color $ui-inactive-text-color
    border-color alpha($ui-dark-button--active-backgroundColor, 60%)

  .item-simple-title-icon
    color $ui-darkinactive-text-color

  .item-simple-title-empty
    color $ui-dark-inactive-text-color


body[data-theme="solarized-dark"]
  .root
    border-color $ui-solarized-dark-borderColor
    background-color $ui-solarized-dark-noteList-backgroundColor

  .item-simple
    border-color $ui-solarized-dark-borderColor
    background-color $ui-solarized-dark-noteList-backgroundColor
    &:hover
      transition 0.15s
      background-color alpha($ui-dark-button--active-backgroundColor, 60%)
      color $ui-solarized-dark-text-color
      .item-simple-title
      .item-simple-title-empty
      .item-simple-title-icon
      .item-simple-bottom-time
        transition 0.15s
        color $ui-solarized-dark-text-color
      .item-simple-bottom-tagList-item
        transition 0.15s
        background-color alpha(#fff, 20%)
        color $ui-solarized-dark-text-color
    &:active
      transition 0.15s
      // background-color $ui-solarized-dark-button--active-backgroundColor
      color $ui-dark-text-color
      .item-simple-title
      .item-simple-title-empty
      .item-simple-title-icon
      .item-simple-bottom-time
        transition 0.15s
        color $ui-solarized-dark-text-color
      .item-simple-bottom-tagList-item
        transition 0.15s
        background-color alpha(white, 10%)
        color $ui-solarized-dark-text-color

  .item-simple--active
    border-color $ui-solarized-dark-borderColor
    background-color $ui-solarized-dark-tag-backgroundColor
    .item-simple-wrapper
      border-color transparent
    .item-simple-title
    .item-simple-title-empty
    .item-simple-title-icon
       color $ui-dark-text-color
    .item-simple-bottom-time
      color $ui-solarized-dark-text-color
    .item-simple-bottom-tagList-item
      background-color alpha(white, 10%)
      color $ui-solarized-dark-text-color
    &:hover
      // background-color alpha($ui-dark-button--active-backgroundColor, 60%)
      color #c0392b
      .item-simple-bottom-tagList-item
        background-color alpha(#fff, 20%)
  .item-simple-title
    color $ui-dark-text-color
    border-bottom $ui-dark-borderColor
  .item-simple-right
    float right
    .item-simple-right-storageName
      padding-left 4px
      opacity 0.4

apply-theme(theme)
  body[data-theme={theme}]
    .root
      border-color get-theme-var(theme, 'borderColor')
      background-color get-theme-var(theme, 'noteList-backgroundColor')

    .item-simple
      border-color get-theme-var(theme, 'borderColor')
      background-color get-theme-var(theme, 'noteList-backgroundColor')
      &:hover
        transition 0.15s
        background-color alpha(get-theme-var(theme, 'button-backgroundColor'), 60%)
        color get-theme-var(theme, 'text-color')
        .item-simple-title
        .item-simple-title-empty
        .item-simple-title-icon
        .item-simple-bottom-time
          transition 0.15s
          color get-theme-var(theme, 'text-color')
        .item-simple-bottom-tagList-item
          transition 0.15s
          background-color alpha(get-theme-var(theme, 'tagList-backgroundColor'), 20%)
          color get-theme-var(theme, 'text-color')
      &:active
        transition 0.15s
        background-color get-theme-var(theme, 'button--active-backgroundColor')
        color get-theme-var(theme, 'text-color')
        .item-simple-title
        .item-simple-title-empty
        .item-simple-title-icon
        .item-simple-bottom-time
          transition 0.15s
          color get-theme-var(theme, 'text-color')
        .item-simple-bottom-tagList-item
          transition 0.15s
          background-color alpha(get-theme-var(theme, 'tagList-backgroundColor'), 10%)
          color get-theme-var(theme, 'text-color')

    .item-simple--active
      border-color get-theme-var(theme, 'borderColor')
      background-color get-theme-var(theme, 'button--active-backgroundColor')
      .item-simple-wrapper
        border-color transparent
      .item-simple-title
      .item-simple-title-empty
      .item-simple-title-icon
      .item-simple-bottom-time
        color get-theme-var(theme, 'text-color')
      .item-simple-bottom-tagList-item
        background-color alpha(get-theme-var(theme, 'tagList-backgroundColor'), 10%)
        color get-theme-var(theme, 'text-color')
      &:hover
        // background-color alpha(get-theme-var(theme, 'button--active-backgroundColor'), 60%)
        color #c0392b
        .item-simple-bottom-tagList-item
          background-color alpha(get-theme-var(theme, 'tagList-backgroundColor'), 20%)
    .item-simple-title
      color $ui-dark-text-color
      border-bottom $ui-dark-borderColor
    .item-simple-right
      float right
      .item-simple-right-storageName
        padding-left 4px
        opacity 0.4

for theme in 'dracula'
  apply-theme(theme)

for theme in $themes
  apply-theme(theme)

